<?xml version="1.0"?>
<package format="2">
  <name>control_interactive_marker</name>
  <version>0.0.0</version>
  <description>The moveit_action_pkg package</description>

  <maintainer email="leowu@todo.todo">leowu</maintainer>

  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>interactive_markers</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>tf</exec_depend>


  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>