<?xml version="1.0"?>
<package>
  <name>tm_grasp_description</name>
  <version>0.0.0</version>
  <description>The tm_description package</description>
  <maintainer email="leowu102000@gmail.com">yhtsai</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
