<?xml version="1.0"?>
<package format="2">
  <name>ros2_send_command_test</name>
  <version>0.0.0</version>
  <description>The moveit_action_pkg package</description>

  <maintainer email="leowu@todo.todo">leowu</maintainer>

  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>


  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
